--- a/index.html
+++ b/index.html
@@ -28,23 +28,19 @@
                 <img src="https://www.boolean.careers/images/misc/logo.png" alt="">
             </div>
             <div class="new-todo">
-                <input type="text" v-model="todo" placeholder="New Todo">
+                <input @keyup.enter="addTodo" type="text" v-model="todo" placeholder="New Todo">
                 <button @click="addTodo">Aggiungi</button>
             </div>
             <div class="todos-container">
-                <ul>
-                    <li class="todo" v-for="elem in todos">
-                        {{elem }}
-                        <i class="fas fa-times"></i>
+                <ul v-if="todos.length > 0">
+                    <li class="todo" v-for="(elem, index) in todos">
+                        {{(index + 1) + ' ' + '-' + ' ' + elem}}
+                        <i class="fas fa-times" @click="deleteTodo(index)"></i>
                     </li>
                 </ul>
-
-
-
-                <!-- <h2>
+                <h2 v-else>
                     Non ci sono Todo
-                </h2> -->
-
+                </h2>
             </div>
         </div>
     </div>
